syntax = "proto3";

package protos.services.v1;
option go_package = "/grpc-service";

import "user_model.proto";
import "google/api/annotations.proto";

service UserService {

    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {
        option (google.api.http) = {
            post: "/v1/users"
            body: "user"
        };
    }

    rpc GetUser(GetUserRequest) returns (GetUserResponse) {
        option (google.api.http) = {
            get: "/v1/users"
        };
    }

}

message CreateUserRequest {
    protos.models.v1.UserWrite user = 1;
}

message CreateUserResponse {
    string id = 1;
}

message GetUserRequest {
    string id = 1;
}

message GetUserResponse {
    protos.models.v1.UserRead user = 1;
}